# transcribe-studio

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_waveform.py
.github/workflows/: ci.yml
app/: __main__.py  _bootstrap.py  analytics.py  cli.py  database.py  export_formats.py  main.py  navigation.py  paths.py  process.py
app/config/: evaluation.toml  transcript_formats.toml
app/config/languages/: en.toml
app/evaluation/: __init__.py  config.py  engine.py  models.py
app/evaluation/matchers/: __init__.py  base.py  semantic.py
app/evaluation/metrics/: __init__.py  base.py  wer.py
app/evaluation/normalizers/: __init__.py  base.py  en.py
app/services/: projects.py  s3.py  secrets.py  settings.py  supabase_schema.py
app/static/css/: style.css
app/static/js/: editor.js  evaluation.js
app/templates/: analysis.html  base.html  dashboard.html  editor.html  evaluation.html  recordings.html  upload.html
app/templates/partials/: breadcrumbs.html  recording_header.html  recording_tabs.html  sidebar.html  upload_form.html
app/templates/screens/: dashboard.html  project_detail.html  project_form.html  project_upload.html  settings.html
app/transcript_formats/: __init__.py  align.py  config.py  models.py  registry.py
app/transcript_formats/parsers/: __init__.py  base.py  json_segments.py  plain_text.py  timestamp_speaker.py
app/web/: __init__.py  context.py  deps.py
app/web/routes/: __init__.py  dashboard.py  legacy.py  projects.py  recordings_pages.py  settings_pages.py
docs/: INSTALL.md
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
scripts/: build.ps1  build.sh  install.ps1  install.sh
tests/: test_cli.py  test_evaluation.py  test_process.py  test_secrets.py  test_settings.py  test_supabase_schema.py  test_transcript_formats.py
